infrastructure/configurations/production/authentication/infra01-alter-it-eu/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-infra01-alter-it-eu
  namespace: controller-authentication
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.infra01.alter-it.eu`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: auth-infra01-alter-it-eu-tls
